[gd_scene load_steps=3 format=2]

[ext_resource path="res://spawner.gd" type="Script" id=1]
[ext_resource path="res://sound/Explosion 4.wav" type="AudioStream" id=2]

[node name="spawner" type="Node2D"]
script = ExtResource( 1 )

[node name="one" type="Node2D" parent="."]
position = Vector2( 500, -100 )

[node name="two" type="Node2D" parent="."]
position = Vector2( 980, -100 )

[node name="three" type="Node2D" parent="."]
position = Vector2( 1450, -100 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 2.0

[connection signal="child_exiting_tree" from="one" to="." method="_on_one_child_exiting_tree"]
[connection signal="child_exiting_tree" from="two" to="." method="_on_two_child_exiting_tree"]
[connection signal="child_exiting_tree" from="three" to="." method="_on_three_child_exiting_tree"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
